# luma-social-event-platform

./: .gitignore  README.md
577-main 4/: vite.config.ts
577-main 4/guidelines/: Guidelines.md
577-main 4/src/styles/: fonts.css  index.css  theme.css
backend/: .gitignore  README.md  pyproject.toml
backend/alembic/versions/: 202602280002_users.py  202603010001_events.py  96147cfc3654_merge_heads.py
backend/docs/: shake-to-match-backend-handoff.md
backend/src/luma/api/: router.py
backend/src/luma/api/routes/: chat.py  health.py
backend/src/luma/cache/: match_pool.py
backend/src/luma/db/models/: event_registration.py  user.py
backend/src/luma/repositories/: chat_repository.py  user_repository.py
backend/src/luma/schemas/: chat.py
backend/src/luma/services/: event_service.py  match_service.py  user_service.py
backend/tests/: test_events_map.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/app/: App.tsx  types.ts
frontend/src/styles/: tailwind.css
luma/alembic/: env.py
luma/alembic/versions/: 202603150001_chat_messages.py
luma/docs/: map-discovery-backend-handoff.md
luma/src/luma/: cli.py
relay-main 3/: .env.example  CONTRIBUTING.md  LICENSE  ONBOARDING.md  docker-compose.yml  main.py  makefile
relay-main 3/.github/workflows/: ci.yml
relay-main 3/alembic/versions/: 202602280001_baseline.py  (+2 more)
relay-main 3/docs/: map-discovery-backend-handoff.zh-CN.md  shake_to_match_plan.md
relay-main 3/tests/: test_auth.py  test_chat.py  test_event_registration.py  test_health.py  test_match.py
(+66 files in other folders)
